Modifiqué mi sitio (ejercicio)

--- a/ejercicio.html
+++ b/ejercicio.html
@@ -4,27 +4,29 @@
 <head>
     <meta charset="UTF-8" />
     <link href="ejercicio.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     <title> Perros salchicha </title>
 </head>
 
-<body mask1>
-    <h1> Bienvenid@ al sitio de los perros salchicha</h1>
-    <div>
-        <h3> Origen </h3>
+<body>
+    <h3> Bienvenid@ al sitio de los perros salchicha</h3>
+    <div class="mask">
+        <h5> Origen </h5>
         <p>El Dachshund fue creado en Alemania, donde era conocido también como el perro tejón, "dachs" que significa
             tejón y "hund" significa perro. ... Los más pequeños se les dedicaban como perros de caza de liebres y
             conejos, mientras los de mayor tamaño para la persecución de jabalíes y zorros y en el rastro y caza del
-            tejón.</p>
+            tejón.
+        </p>
     </div>
-    <div>
-        <h3> Tipos de perros salchicha</h3>
+    <div class="mask">
+        <h5> Tipos de perros salchicha</h5>
         <ul>
             <li>Kanichen</li>
             <li>Miniatura</li>
             <li>Estándar</li>
         </ul>
     </div>
-    <div>
+    <div class="otto">
         <img src="otto.jpeg" alt="esta es una foto de Otto" title="Otto-Cino" width="450">
     </div>
 </body>
